--- a/thesis/04-nmt-ctc.tex
+++ b/thesis/04-nmt-ctc.tex
@@ -141,7 +141,7 @@ As said in the previous chapter, training models with \ac{ctc} does not impose
 any requirements on the model architecture. In our experiments, we aim for a
 reasonable comparison between our proposed approach and the state-of-the-art
 autoregressive models. We adapt the Transformer model and use similar
-hyper-parameters where applicable.
+hyperparameters where applicable.
 
 Non-autoregressive models generate the outputs in parallel, which requires that
 the output length is known beforehand. In autoregressive models, the end of
