--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,3 +1,15 @@
+@inproceedings{amodei-etal-2016-deep,
+  title={Deep Speech 2: End-to-end Speech Recognition in English and Mandarin},
+  author={Amodei, Dario and Ananthanarayanan, Sundaram and Anubhai, Rishita and
+                  Bai, Jingliang and Battenberg, Eric and Case, Carl and
+                  Casper, Jared and Catanzaro, Bryan and Cheng, Qiang and Chen,
+                  Guoliang and others},
+  booktitle={International conference on machine learning},
+  pages={173--182},
+  year={2016},
+  organization={PMLR}
+}
+
 @misc{tensorflow2015-whitepaper,
 title={ {TensorFlow}: Large-Scale Machine Learning on Heterogeneous Systems},
 url={https://www.tensorflow.org/},
@@ -823,7 +835,7 @@ author={
   pages =	 "1--10",
 }
 
-@inproceedings{mikolov2013distributed,
+@inproceedings{mikolov-etal-2013-distributed,
   title =	 {Distributed representations of words and phrases and their
                   compositionality},
   author =	 {Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado,
