--- a/thesis/list_of_publications.tex
+++ b/thesis/list_of_publications.tex
@@ -10,7 +10,7 @@ TODO tohle se musí přepsat
 \begin{itemize}[noitemsep,topsep=0pt]
 
     \item The paper describes a submission to the WMT16 which describes our early
-        experiments with \gls{mmt}.
+        experiments with multimodal machine translation.
 
     \item Citations (without self-citations): \JH{todo}
 
@@ -21,10 +21,9 @@ TODO tohle se musí přepsat
 \noindent\bibentry{libovicky-helcl-2017-attention}
 \begin{itemize}[noitemsep,topsep=0pt]
 
-  \item The paper introduces techniques for combining multiple different inputs in
-    sequence-to-sequence learning using \glspl{rnn}.
-
-  \item Awarded as an Outstanding Paper at ACL~2017 and ÚFAL Best Paper 2017.
+\item The paper introduces techniques for combining multiple different inputs
+  in sequence-to-sequence learning using \acp{rnn} Awarded as an Outstanding
+  Paper at ACL~2017 and ÚFAL Best Paper 2017.
 
   \item Citations (without self-citations): \JH{todo}
 
@@ -48,7 +47,7 @@ TODO tohle se musí přepsat
 \noindent\bibentry{helcl-libovicky-2017-cuni}
 \begin{itemize}[noitemsep,topsep=0pt]
 
-\item A submission to WMT17 \gls{mmt} task.
+\item A submission to WMT17 multimodal machine translation task.
 
   \item Citations (without self-citations): \JH{todo}
 
