--- a/thesis/03-nonautoregressive.tex
+++ b/thesis/03-nonautoregressive.tex
@@ -323,20 +323,37 @@ hyperparameter $\alpha$, sampled from a Bernoulli distribution.
 \paragraph{Aligned Cross Entropy for \ac{nat}} One problem with using
 cross-entropy objective for training \ac{nat} models is that it heavily
 penalizes misaligned target words. If a correct word is generated at an
-incorrect position in the target sentence, the loss is the same as if the model
-generates a completely unrelated word. In autoregressive models, this problem
-is avoided with teacher forcing -- the model is provided with the preceding
-words from the reference sentence. Without teacher forcing, the alignment
-between the predicted distributions and the positions in the reference sentence
-is too rigid. One way to address this problem is to consider the alignment as a
-latent variable. \JH{add example of misaligned sentence.}
+incorrect position in the target sentence, the loss is the same as when the
+model generates a completely unrelated word. In autoregressive models, this
+problem is avoided with teacher forcing -- the model is provided with the
+preceding words from the reference sentence. Without teacher forcing, the
+alignment between the predicted distributions and the positions in the
+reference sentence is too rigid. For example, consider the reference sentence
+``Thank you for your cooperation.'' In a non-autoregressive model, another
+translation ``Thanks for your cooperation'' receives the same training signal
+as a completely wrong translation. The difference is that on the second
+position, the autoregressive model knows that ``Thank'' was expected on the
+first position, so the next word ``for'' does not receive high probability.
+One way to address this problem is to consider the alignment as a latent
+variable.
 
-Aligned cross entropy (AXE; \citealp{ghazvininejad2020aligned}) is an objective
-function that takes this problem into account. It uses a dynamic programming
-algorithm to find the alignment with the minimum cross-entropy loss. \JH{add an
-  example of the best alignment}
+\Acl{axe} \glsunset{axe} (\acs{axe}; \citealp{ghazvininejad2020aligned}) is an
+objective function that takes this problem into account. It uses a dynamic
+programming algorithm to find the alignment with the minimum cross-entropy
+loss. In the example from the previous paragraph, the alignment with the lowest
+cross-entropy is the one that aligns the positions 3--5 from the label sequence
+(representing the suffix ``for your cooperation'') to output positions 2--4 in
+the output. Either of the first two positions in the label sequence can be
+aligned to the first position in the output sequence, while the other label
+position remains unaligned.
 
-\JH{skip prediction, skip target in the algorithm}
+It is possible for the alignment to either skip a target position (as in the
+example above), or keep an unaligned position in the prediction sequence. In
+case of skipping the predictions, an empty token is aligned with the skipped
+position (so that $-\log p(y_t = \epsilon)$ is added to the loss). In case of
+skipping a target position, the negative log probability of the skipped target
+word is added to the loss, weighted by a hyperparameter $\delta$ which controls
+the cost of the skip-target operation.
 
 Formally, ... \JH{doplnit}
 
@@ -346,6 +363,14 @@ cross-entropy loss, the \ac{ctc} algorithm computes the sum of all the possible
 alignments. Unlike \ac{axe}, we only consider skipping the predictions, while
 not allowing to skip the target positions. We present the \ac{ctc}-based method
 in detail in Chapter \ref{chap:nar-nmt-ctc}.
+
+\JH{relate the axe approach to bag-of-ngrams who also deal with misalignment}
+\paragraph{\JH{Batch of ngrams.}} \citet{shao2020minimizing} also address the
+misalignment issue. Instead of finding an appropriate alignment, they introduce
+a new bag-of-ngrams objective, which minimizes the difference between the
+\ac{nat} model output and the target sentence. \JH{tell me more!}
+
+
 
 % ------------------------------------------------------------------------------
 \paragraph{Iterative Decoding from Masked Language Models.} Recently,
@@ -359,7 +384,7 @@ Unlike conventional language models that estimate the probability of a word
 given the preceding words, \acp{mlm} are trained to predict words on masked
 positions inside a sequence. Instead of working with a monolingual sequence,
 \acp{xlm} extend this idea to a pair of sequences in two (or more) languages.
-To facilitate for alignment modeling and language identification, \acp{xlm}
+To facilitate for alignment modeling and language identification, \ac{xlm}
 architectures include a language embedding and reset the positional encodings
 for each sentence. See Figure \ref{fig:mlm-xlm-example} for an illustration of
 differences between \acp{mlm} and \acp{xlm}.
@@ -367,7 +392,7 @@ differences between \acp{mlm} and \acp{xlm}.
 \begin{figure}
   \centering
 
-  \includegraphics[width=.95\textwidth]{img/mlm-xlm.png}
+  \includegraphics[width=\textwidth]{img/mlm-xlm.png}
 
   \caption{A comparison of masked language model and translation
     (cross-lingual) language model architectures. We use the image of
@@ -500,20 +525,11 @@ repeated translations), and to express a reconstruction loss using an external
 translation model (in order to battle incomplete translation problem).
 
 % ------------------------------------------------------------------------------
-\paragraph{\citep{shao2020minimizing}}
-
-
-
-% ------------------------------------------------------------------------------
-
-% ------------------------------------------------------------------------------
 
 
 % ------------------------------------------------------------------------------
-
 \begin{itemize}
 \item NAT-REG \citep{wang2019nonautoregressive} -- NAR NMT with auxiliary regularization
-\item bag-of-ngrams \citep{shao2020minimizing} -- Minimizing the bag-of-ngrams diff for NAR NMT
 \item Hint-NAT \citep{li2019hint} -- hint-based training for NAR MT
 \item DCRF \citep{sun2019fast} -- fast structured decoding for sequence models
 \item Flowseq \citep{ma2019flowseq} -- NAR conditional sequence generator with generative flow
@@ -523,40 +539,26 @@ translation model (in order to battle incomplete translation problem).
 \item Imputer \citep{saharia2020nonautoregressive} -- imputer (again)
 \end{itemize}
 
-\section{Non-Autoregressive NMT with Connectionist Temporal Classification}
-\label{sec:nat-ctc}
 
-\paperdisclaim{This section is based on paper ``End-to-End Non-Autoregressive
-  Neural Machine Translation with Connectionist Temporal Classification'',
-  joint work with Jindřich Libovický, published at EMNLP 2018.}
+% The idea behind our approach is that we do not explicitly estimate the target
+% sequence length. Instead, we fix the decoder length on an upper limit of the
+% target length, given by a hyperparameter. As the decoder input, we use the
+% encoder states, split and linearly projected to match the decoder state
+% dimension and the target length.
 
-In this section, we describe our approach to \acl{nat}.
+% As a consequence, we allow the model to generate special ``blank'' tokens in
+% any given time steps. Since the alignment between the reference tokens and the
+% corresponding output distribution is unknown, we treat it as a latent variable,
+% and we use the loss function which marginalizes this latent variable out. In
+% other words, our loss function is the sum of losses given any possible
+% alignment. This loss, used mostly in speech recognition domain
+% \citep{graves2006connectionist}, is known as the \acf{ctc}. We describe
+% this function in more detail in Section \JH{...}.
 
-The idea behind our approach is that we do not explicitly estimate the target
-sequence length. Instead, we fix the decoder length on an upper limit of the
-target length, given by a hyperparameter. As the decoder input, we use the
-encoder states, split and linearly projected to match the decoder state
-dimension and the target length.
-
-As a consequence, we allow the model to generate special ``blank'' tokens in
-any given time steps. Since the alignment between the reference tokens and the
-corresponding output distribution is unknown, we treat it as a latent variable,
-and we use the loss function which marginalizes this latent variable out. In
-other words, our loss function is the sum of losses given any possible
-alignment. This loss, used mostly in speech recognition domain
-\citep{graves2006connectionist}, is known as the \acf{ctc}. We describe
-this function in more detail in Section \JH{...}.
-
-The \ac{ctc} loss is differentiable with respect to the model parameters,
-which means we can back-propagate the gradients returned by the \ac{ctc}
-computation. Thus, unlike the originally proposed architectures of
-\citet{gu2017nonautoregressive}, our model can be trained end to end.
-
-
-% \subsection{Connectionist Temporal Classification}
-% \label{subsec:ctc}
-
-
+% The \ac{ctc} loss is differentiable with respect to the model parameters,
+% which means we can back-propagate the gradients returned by the \ac{ctc}
+% computation. Thus, unlike the originally proposed architectures of
+% \citet{gu2017nonautoregressive}, our model can be trained end to end.
 
 
 
@@ -567,14 +569,6 @@ computation. Thus, unlike the originally proposed architectures of
 % \paperdisclaim{This section is based on paper \emph{``Improving Fluency of
 %   Non-Autoregressive Neural Machine Translation''}, joint work with Zdeněk
 %   Kasner and Jindřich Libovický, published online at \texttt{arXiv.org}.}
-
-
-
-
-% \section{Non-Autoregressive Model Optimizations}
-% \label{sec:nat-opt}
-
-
 
 %%% Local Variables:
 %%% mode: latex
